# django-cruditor

./: .editorconfig  .eslintignore  .eslintrc  .gitignore  .python-version  .readthedocs.yml  .sass-lint.yml  .travis.yml  CHANGELOG.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  TODO.rst  eslint.config.js  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  stylelint.config.js  tox.ini  webpack.config.js
.github/workflows/: release.yml  test.yml
client/js/: cruditor.js
client/js/components/: formset.js
client/scss/: _forms.scss  _login.scss  cruditor.scss
cruditor/: __init__.py  collection.py  datastructures.py  filters.py  forms.py  mixins.py  views.py  widgets.py
cruditor/client/js/components/: formset.js
cruditor/client/scss/: _forms.scss  _login.scss  _views.scss  cruditor.scss
cruditor/contrib/: collection.py
cruditor/locale/de/LC_MESSAGES/: django.mo  django.po
cruditor/locale/fr/LC_MESSAGES/: django.mo  django.po
cruditor/static/cruditor/css/: bootstrap-select2.css  cruditor.css  cruditor.css.map  jquery-ui.css  styles.css
cruditor/static/cruditor/js/: cruditor.js  cruditor.js.map  jquery.formset.js
cruditor/static/cruditor/js/bootstrap-datepicker/: moment-with-locales.js
cruditor/static/cruditor/js/bootstrap-select2/: select2-activator.js  select2.js
cruditor/static/cruditor/js/jquery-slugify/: jquery.slugify.js  slugify-activator.js
cruditor/static/cruditor/js/jquery-ui/: jquery-ui.js
cruditor/templates/cruditor/: 403.html  404.html  base.html  change-password.html  delete.html  form.html  list.html  login.html  logout.html
cruditor/templates/cruditor/forms/: attrs.html  checkbox_select.html  errors.html  field.html  inline-formset.html  inline_formset.html  input.html  layout.html  radio_select.html  row.html  row_checkbox_field.html  row_default_field.html  select.html  textarea.html
cruditor/templates/cruditor/forms/widgets/: multiwidget.html  radioselect.html
cruditor/templates/cruditor/includes/: breadcrumb.html  filter-form.html  menu.html  messages.html  navigation.html  pagination.html  table-pagination.html  table.html  titlebuttons.html
docs/: Makefile  api.rst  api_collection.rst  api_contrib.rst  api_filters.rst  api_forms.rst  api_mixins.rst  api_views.rst  conf.py  filters.rst  forms.rst  index.rst  installation.rst  requirements.txt  usage.rst  views.rst  widgets.rst
examples/: manage.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
examples/authinterface/: manage.py
examples/authinterface/authinterface/: forms.py  settings.py  tables.py  urls.py  views.py
examples/collection/: filters.py  forms.py  tables.py  urls.py  views.py
examples/examples/: mixins.py  settings.py  urls.py  views.py
examples/formset/: forms.py  urls.py  views.py
examples/minimal/: apps.py  forms.py  tables.py  urls.py  views.py
examples/minimal/migrations/: 0001_initial.py
examples/remote/: forms.py  models.py  tables.py  urls.py  views.py
examples/store/: apps.py  models.py
examples/store/migrations/: 0001_initial.py
examples/templates/: home.html  menu.html
examples/templates/minimal/: demo.html
static/js/: cruditor.js
static/js/components/: formset.js
static/scss/: _alerts.scss  _forms.scss  _navigation.scss  _title-buttons.scss  _uikit.scss  cruditor.scss
tests/: conftest.py  factories.py  settings.py  test_collection.py  test_filters.py  test_forms.py  test_views.py  test_widgets.py
webpack/: webpack.common.js  webpack.config.js  webpack.javascript.js  webpack.sass.js
