[project]
name = "django-cruditor"
version = "3.1.0"
description = "A set of class based views and mixins to generate CRUD interfaces."
authors = [{ name = "Stephan Jaekel", email = "steph@rdev.info" }]
requires-python = ">=3.10,<4"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: MIT License",
	"Environment :: Web Environment",
	"Framework :: Django",
	"Intended Audience :: Developers",
	"Operating System :: Unix",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
]
readme = "README.rst"
dependencies = [
    "Django>=4.2",
    "django-tapeforms>=2.2"
]

[project.optional-dependencies]
tables = ["django-tables2>=2.6"]
filters = ["django-filter>=24.3"]

[project.urls]
Homepage = 'https://github.com/stephrdev/django-cruditor'
Repository = 'https://github.com/stephrdev/django-cruditor'
Documentation = "https://django-cruditor.readthedocs.io"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-django>=4.9",
    "coverage[toml]>=7.6",
    "ruff",
    "django-tables2>=2.6",
    "django-filter>=24.3",
    "requests>=2.32",
    "factory-boy>=3.3.1",
]

[tool.ruff]
line-length = 96
indent-width = 4
src = ["cruditor"]
target-version = "py38"

[tool.ruff.lint]
ignore = ["E501", "E203"]
select = [
  # pyupgrade
  "UP",
  # pycodestyle error
  "E",
  # Pyflakes
  "F",
  # isort
  "I",
  # pycodestyle warning
  "W"
]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["E402"]

[tool.pytest.ini_options]
addopts = "--verbose --tb=short --nomigrations"
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.coverage.run]
branch = true
source = ["cruditor"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cruditor", "tests", "examples"]
packages = ["cruditor"]
license-files = []
